translation-tool/inputs/source_meta/objects/Customer_Billing_Spec_Template__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Billing Spec Templates</relationshipLabel>
        <relationshipName>Cust_Billing_Spec_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adapter_Model__c</fullName>
        <label>Adapter Model / Device Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anytime_Bytes__c</fullName>
        <label>Anytime Bytes (GB/Month)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOMs__c</fullName>
        <label>BOMs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Category__c</fullName>
        <formula>IF(Customer_Product__c &lt;&gt; null ,TEXT(Customer_Product__r.Product__r.Billing_Category__c) , 
IF(HNS_Product__c &lt;&gt; null ,TEXT(HNS_Product__r.Billing_Category__c),null) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Bytes__c</fullName>
        <description>Off Peak Hour Allowance</description>
        <label>Bonus Bytes (2am - 8am) (GB/Month)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account_Name__c</field>
                <operation>equals</operation>
                <valueField>Customer_Product__c.Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer_Product__c</referenceTo>
        <relationshipLabel>Customer Billing Spec Templates (Customer Product)</relationshipLabel>
        <relationshipName>Cust_Billing_Spec_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSS_Package_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup reference on Package Table for a given Catalog Pricebook</description>
        <label>DSS Package Name</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Customer Billing Spec Templates</relationshipLabel>
        <relationshipName>Cust_Billing_Spec_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSS_Program_Code__c</fullName>
        <formula>DSS_Program_Name__r.DSS_Program_Code__c</formula>
        <label>DSS Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSS_Program_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Program / DSS Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account_Name__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Customer Billing Spec Templates</relationshipLabel>
        <relationshipName>Cust_Billing_Spec_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Download_Speed__c</fullName>
        <label>Download Speed (Mbps)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HNS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HNS Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select HNS Products of Product Type &apos;Hardware&apos; only.</errorMessage>
            <filterItems>
                <field>HNS_Products__c.Product_Type__c</field>
                <operation>equals</operation>
                <value>Hardware</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipLabel>Customer Billing Spec Templates</relationshipLabel>
        <relationshipName>Customer_Billing_Spec_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Help_Desk_Support_Level__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Help Desk Support Level</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer_Product__c.Product__r.Product_Type__c</field>
                <operation>equals</operation>
                <value>Support</value>
            </filterItems>
            <filterItems>
                <field>Customer_Product__c.Product__r.Product_Grouping_Name__c</field>
                <operation>equals</operation>
                <value>Helpdesk Support</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer_Product__c</referenceTo>
        <relationshipLabel>Customer Billing Spec Templates (Help Desk Support Level)</relationshipLabel>
        <relationshipName>Cust_Billing_Spec_Templates2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Install_Country__c</fullName>
        <label>Install Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_State__c</fullName>
        <label>Install State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Install Support</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer_Product__c.Product__r.Product_Type__c</field>
                <operation>equals</operation>
                <value>Support</value>
            </filterItems>
            <filterItems>
                <field>Customer_Product__c.Product__r.Product_Grouping_Name__c</field>
                <operation>equals</operation>
                <value>Install Support</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer_Product__c</referenceTo>
        <relationshipLabel>Customer Billing Spec Templates (Install Support)</relationshipLabel>
        <relationshipName>Customer_Billing_Spec_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease_Purchase__c</fullName>
        <label>Lease or Purchase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Purchase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lease_Term__c</fullName>
        <label>Lease Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>42</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>54</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>66</fullName>
                </value>
                <value>
                    <fullName>72</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Max Quantity</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Min Quantity</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NAPSource_NAPSubType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NAP Source - NAP SubType</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>NAPSource-NAPSubType should be NAPSource_NAPSubType</errorMessage>
            <filterItems>
                <field>Order_Reference__c.Ord_Reference_Grouping__c</field>
                <operation>equals</operation>
                <value>NAP_Source_Sub_Source</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Order_Reference__c</referenceTo>
        <relationshipLabel>Customer Billing Spec Templates (NAPSource - NAPSubType)</relationshipLabel>
        <relationshipName>Cust_Billing_Spec_Templates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NAP_Source__c</fullName>
        <formula>NAPSource_NAPSubType__r.Master_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NAP Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAP_Sub_Type__c</fullName>
        <formula>NAPSource_NAPSubType__r.Sub_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NAP Sub Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderType_OrderSubType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Type - Order SubType</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Order_Reference__c.Ord_Reference_Grouping__c</field>
                <operation>equals</operation>
                <value>Order_Type_Sub_Type</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Order_Reference__c</referenceTo>
        <relationshipLabel>Customer Billing Spec Templates (OrderType - Order SubType)</relationshipLabel>
        <relationshipName>Cust_Billing_Spec_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Sub_Type__c</fullName>
        <formula>OrderType_OrderSubType__r.Sub_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Sub Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <formula>OrderType_OrderSubType__r.Master_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>IF(Customer_Product__c &lt;&gt; null ,TEXT(Customer_Product__r.Product__r.Product_Category__c) , 
IF(HNS_Product__c &lt;&gt; null ,TEXT(HNS_Product__r.Product_Category__c),null) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>IF(Customer_Product__c &lt;&gt; null ,TEXT(Customer_Product__r.Product__r.Product_Type__c) ,
IF(HNS_Product__c &lt;&gt; null ,TEXT(HNS_Product__r.Product_Type__c),null) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Maintenance__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Remote Maintenance</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer_Product__c.Product__r.Product_Type__c</field>
                <operation>equals</operation>
                <value>Support</value>
            </filterItems>
            <filterItems>
                <field>Customer_Product__c.Product__r.Product_Grouping_Name__c</field>
                <operation>equals</operation>
                <value>Field Maintenance</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer_Product__c</referenceTo>
        <relationshipLabel>Customer Billing Spec Templates (Remote Maintenance)</relationshipLabel>
        <relationshipName>Cust_Billing_Spec_Templates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Satellite_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Satellite Name</label>
        <referenceTo>Satellite__c</referenceTo>
        <relationshipLabel>Customer Billing Spec Templates</relationshipLabel>
        <relationshipName>Customer_Billing_Spec_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Data_Allowance__c</fullName>
        <label>Total Data Allowance (GB/Month)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transport_Name__c</fullName>
        <label>Transport Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_Speed__c</fullName>
        <label>Upload Speed (Mbps)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Defined_Customer_Billing_Spec_Name__c</fullName>
        <label>User Defined Customer Billing Spec Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VSAT_Antenna__c</fullName>
        <label>VSAT Antenna</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Customer Billing Spec Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User_Defined_Customer_Billing_Spec_Name__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Type__c</columns>
        <columns>BOMs__c</columns>
        <columns>Customer_Product__c</columns>
        <columns>Lease_Purchase__c</columns>
        <columns>Lease_Term__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CBSP-{0000000000}</displayFormat>
        <label>Customer Billing Spec Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Billing Spec Templates</pluralLabel>
    <recordTypes>
        <fullName>B2B</fullName>
        <active>true</active>
        <description>Business to Business</description>
        <label>B2B</label>
    </recordTypes>
    <recordTypes>
        <fullName>B2C</fullName>
        <active>true</active>
        <description>Business to Consumer</description>
        <label>B2C</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>